adicionei as imagens

--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
       <h2>Escolha seu Frango</h2>
 
       <div class="produto">
-        <img src="https://via.placeholder.com/200" alt="Frango Tradicional" />
+        <img src="/img/frangoTradicional.png" alt="Frango Tradicional" />
         <h4>Frango Assado Tradicional</h4>
         <p>R$ 35,00</p>
         <button onclick="adicionarAoCarrinho('Frango Tradicional', 35)">
@@ -30,7 +30,7 @@
       </div>
 
       <div class="produto">
-        <img src="https://via.placeholder.com/200" alt="Frango com Batata" />
+        <img src="/img/frangoComBatata.jpg" alt="Frango com Batata" />
         <h4>Frango com Batata</h4>
         <p>R$ 42,00</p>
         <button onclick="adicionarAoCarrinho('Frango com Batata', 42)">
@@ -39,7 +39,7 @@
       </div>
 
       <div class="produto">
-        <img src="https://via.placeholder.com/200" alt="Frango com Farofa" />
+        <img src="/img/frangoComFarofa.jpg" alt="Frango com Farofa" />
         <h4>Frango com Farofa</h4>
         <p>R$ 40,00</p>
         <button onclick="adicionarAoCarrinho('Frango com Farofa', 40)">
